--- a/index.html
+++ b/index.html
@@ -16,45 +16,118 @@
   </head>
   <body>
     <!--nAv bar -->
-<nav class="navbar navbar-expand-lg bg-dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">
-        
-        RetroGames</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
+    <nav class="navbar navbar-expand-lg bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"> Retro Games</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
 
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Console List
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">NES</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">SNES</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">ATARI</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">PLAYSTATION</a></li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Console List
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">NES</a></li>
+                <li><hr class="dropdown-divider" /></li>
+                <li><a class="dropdown-item" href="#">SNES</a></li>
+                <li><hr class="dropdown-divider" /></li>
+                <li><a class="dropdown-item" href="#">ATARI</a></li>
+                <li><hr class="dropdown-divider" /></li>
+                <li><a class="dropdown-item" href="#">PLAYSTATION</a></li>
+              </ul>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="#">About Us</a>
+            </li>
           </ul>
-        </li>
-
-        <li class="nav-item">
-            <a class="nav-link" href="#">About Us</a>
-          </li>
-      </ul>
-    </div>
-  </div>
-</nav>
+        </div>
+      </div>
+    </nav>
     <!--end of nav bar -->
 
+    <div class="popular">
+      <h1 class="most__popular">Most Popular Games</h1>
 
+      <hr class="hr" />
+    </div>
+
+    <div id="popular__games" class="container-lg">
+      <div class="card" style="width: 22rem">
+        <img src="https://i.987967.xyz/screenshot/72/2018/09/04/40238_0ae25ae7f0f2fdd2ff1546d5c92cc5dabe06095c.png" class="card-img-top" alt="..." />
+        <div class="card-body">
+          <h5 class="card-title">The Ultimate Tekken 3 (PS1 version hd)</h5>
+          <a href="#" class="btn btn-outline-danger">Play</a>
+        </div>
+      </div>
+
+      <div class="card" style="width: 22rem">
+        <img src="https://i.987967.xyz/screenshot/79/b/23881_2ee092593fc532584b30e9f49a69eec38f301c86.png" class="card-img-top" alt="..." />
+        <div class="card-body">
+          <h5 class="card-title">Top Gear</h5>
+
+          <a href="#" class="btn btn-outline-danger">Play</a>
+        </div>
+      </div>
+
+      <div class="card" style="width: 22rem">
+        <img src="https://i.987967.xyz/previews/mvscu.png" class="card-img-top" alt="..." />
+        <div class="card-body">
+          <h5 class="card-title">Marvel vs Capcom - clash of super heroes (980123 USA)</h5>
+
+          <a href="#" class="btn btn-outline-danger">Play</a>
+        </div>
+      </div>
+
+      <div class="card" style="width: 22rem">
+        <img src="https://i.987967.xyz/screenshot/19/2020/12/28/8843_660ca881b33a86ab9b3c21b5de5fbdcabaeca0cc.png" class="card-img-top" alt="..." />
+        <div class="card-body">
+          <h5 class="card-title">JoJo's Bizarre Adventure</h5>
+
+          <a href="#" class="btn btn-outline-danger">Play</a>
+        </div>
+      </div>
+
+      <div class="card" style="width: 22rem">
+        <img src="https://i.987967.xyz/screenshot/77/d/30899_acc786ae8f4fe4ef9ff4a74d5c3a77fabaa240ca.png" class="card-img-top" alt="..." />
+        <div class="card-body">
+          <h5 class="card-title">Sonic The Hedgehog (USA, Europe)</h5>
+   
+          <a href="#" class="btn btn-outline-danger">Play</a>
+        </div>
+      </div>
+
+      <div class="card" style="width: 22rem">
+        <img src="https://i.987967.xyz/screenshot/72/2019/09/03/41687_b197ecc70b99140ce92d9d9c16a6e5f0f0520bad.jpg" class="card-img-top" alt="..." />
+        <div class="card-body">
+          <h5 class="card-title">Crash Team Racing</h5>
+
+          <a href="#" class="btn btn-outline-danger">Play</a>
+        </div>
+      </div>
+
+
+    </div>
 
     <!-- JavaScript Bundle with Popper -->
     <script
