--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <img src="https://i.987967.xyz/screenshot/72/2018/09/04/40238_0ae25ae7f0f2fdd2ff1546d5c92cc5dabe06095c.png" class="card-img-top" alt="..." />
         <div class="card-body">
           <h5 class="card-title">The Ultimate Tekken 3 (PS1 version hd)</h5>
-          <a href="#" class="btn btn-outline-danger">Play</a>
+          <a href="tekken3.html" class="btn btn-outline-danger">Play</a>
         </div>
       </div>
 
@@ -86,7 +86,7 @@
         <div class="card-body">
           <h5 class="card-title">Top Gear</h5>
 
-          <a href="#" class="btn btn-outline-danger">Play</a>
+          <a href="topgear.html" class="btn btn-outline-danger">Play</a>
         </div>
       </div>
 
@@ -95,7 +95,7 @@
         <div class="card-body">
           <h5 class="card-title">Marvel vs Capcom - clash of super heroes (980123 USA)</h5>
 
-          <a href="#" class="btn btn-outline-danger">Play</a>
+          <a href="marveVScapcom.html" class="btn btn-outline-danger">Play</a>
         </div>
       </div>
 
@@ -104,7 +104,7 @@
         <div class="card-body">
           <h5 class="card-title">JoJo's Bizarre Adventure</h5>
 
-          <a href="#" class="btn btn-outline-danger">Play</a>
+          <a href="jojo.html" class="btn btn-outline-danger">Play</a>
         </div>
       </div>
 
@@ -113,7 +113,7 @@
         <div class="card-body">
           <h5 class="card-title">Sonic The Hedgehog (USA, Europe)</h5>
    
-          <a href="#" class="btn btn-outline-danger">Play</a>
+          <a href="sonic.html" class="btn btn-outline-danger">Play</a>
         </div>
       </div>
 
@@ -122,7 +122,7 @@
         <div class="card-body">
           <h5 class="card-title">Crash Team Racing</h5>
 
-          <a href="#" class="btn btn-outline-danger">Play</a>
+          <a href="crach.html" class="btn btn-outline-danger">Play</a>
         </div>
       </div>
 
